[project]
name = "spotedit-dev"
description = "ComfyUI-SpotEdit is a training-free, region-aware image editing framework based on diffusion Transformers with token pruning and KV cache injection. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["einops"]

[project.urls]
Repository = "https://github.com/llldmxy99/ComfyUI-SpotEdit-Dev"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/llldmxy99/ComfyUI-SpotEdit-Dev/wiki"
"Bug Tracker" = "https://github.com/llldmxy99/ComfyUI-SpotEdit-Dev/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SpotEdit-Dev"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

